--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,17 @@
-Flask
-yfinance
-pandas
-numpy
-plotly
-requests
-textblob
-pytrends
-tensorflow
-scikit-learn
-python-dotenv
-streamlit 
-transformers 
-vaderSentiment
-torch
-nltk
-
-
+Flask==3.0.3
+yfinance==0.2.43
+pandas==2.2.3
+numpy==1.26.4
+plotly==5.24.1
+requests==2.32.3
+textblob==0.18.0
+pytrends==4.9.2
+tensorflow==2.17.0
+scikit-learn==1.5.2
+python-dotenv==1.0.1
+streamlit==1.39.0
+transformers==4.44.2
+vaderSentiment==3.3.2
+torch==2.5.1
+nltk==3.9.1
+joblib==1.4.2
