--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,6 @@ python-dotenv==1.0.1
 streamlit==1.39.0
 transformers==4.44.2
 vaderSentiment==3.3.2
-torch==2.5.1+cpu
+torch==2.5.1
 nltk==3.9.1
 joblib==1.4.2
