--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,9 @@ tensorflow==2.20.0
 scikit-learn==1.5.2
 python-dotenv==1.0.1
 streamlit==1.39.0
-transformers==4.44.2
+transformers==4.26.1        # prebuilt wheels compatible with Python 3.11
+tokenizers==0.13.3          # pin to avoid Rust build
 vaderSentiment==3.3.2
-torch==2.5.1
+torch==2.3.1                # compatible prebuilt wheel for Python 3.11
 nltk==3.9.1
 joblib==1.4.2
