--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
-Flask==2.3.3
-yfinance==0.2.43
-pandas==2.2.3
-numpy==1.26.4
-plotly==5.24.1
-requests==2.32.3
-textblob==0.18.0
-pytrends==4.9.2
-tensorflow==2.20.0
-scikit-learn==1.5.2
-python-dotenv==1.0.1
-streamlit==1.39.0
-transformers==4.26.1        # prebuilt wheels compatible with Python 3.11
-tokenizers==0.13.3          # pin to avoid Rust build
-vaderSentiment==3.3.2
-torch==2.3.1                # compatible prebuilt wheel for Python 3.11
-nltk==3.9.1
-joblib==1.4.2
+Flask>=2.3.3
+yfinance>=0.2.43
+pandas>=2.2.3
+numpy>=1.26.4
+plotly>=5.24.1
+requests>=2.32.3
+textblob>=0.18.0
+pytrends>=4.9.2
+tensorflow>=2.20.0
+scikit-learn>=1.5.2
+python-dotenv>=1.0.1
+streamlit>=1.39.0
+transformers>=4.44.2
+tokenizers>=0.13.3
+vaderSentiment>=3.3.2
+torch>=2.5.1
+nltk>=3.9.1
+joblib>=1.4.2
